PROJECT(Engine)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_scripts")

FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
	ADD_CUSTOM_TARGET(engine_docs ${DOXYGEN_EXECUTABLE} "${CMAKE_SOURCE_DIR}/doxygen.conf" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} COMMENT "Generating engine's documentation")
ELSE(DOXYGEN_FOUND)
	ADD_CUSTOM_TARGET(engine_docs COMMENT "Doxygen not found.")
ENDIF(DOXYGEN_FOUND)

SET(ENGINESRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/enginesrc")
SET(FRAMEWORKSRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/frameworksrc")

INCLUDE("CMakeListsEngine.txt")
INCLUDE("CMakeListsFramework.txt")

# EOF
